resources/app-sre/dashdot/dashdotdb.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
    haproxy.router.openshift.io/timeout: "5m"
  labels:
    service: dashdot
  name: dashdotdb
spec:
  host: dashdotdb.devshift.net
  to:
    kind: Service
    name: dashdotdb
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
